--- a/hw_2-apr_12/hw_2.tex
+++ b/hw_2-apr_12/hw_2.tex
@@ -124,6 +124,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \problem{Problem 2}{Show that $L^\infty(\Rl)$ is not separable.  [Hint:  There is an uncountable set $\mathcal{F} \subset L^\infty$ such that $\norm{f-g}_\infty \geq 1$ for all $f, g \in \mathcal{F}$ with $f \neq g$.]}
 \begin{proof}
+    Let $\mathcal{F} = \{\mathcal{X}_{[0,\alpha]}\ :\ 0 < \alpha \in \Rl\}$.  $\mathcal{F}$ is clearly uncountable.  Consider any two $f,g \in \mathcal{F}$.  Then, without loss of generality, $f = \mathcal{X}_{[0,\alpha]}$ and $g = \mathcal{X}_{[0,\beta]}$ where $\alpha < \beta$.  Also, 
+    \begin{align*}
+        \norm{f - g}_\infty = \esssup\{\mathcal{X}_{(\alpha,\beta]}\} = 1
+    \end{align*}
+    Thus the ball around any $f \in \mathcal{F}$ of radius $\frac{1}{2}$, i.e.~$B\qty(f,\frac{1}{2})$, contains no other elements of $\mathcal{F}$.  Thus $L^\infty(\Rl)$ is not separable since $\mathcal{F}$ is uncountable and not dense.
 \end{proof}
 
 
@@ -134,6 +139,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \problem{Problem 3}{Prove Chebyshev's Inequality:  If $f \in L^p$ ($1 \leq p < \infty$), then for any $\alpha > 0$, $$\mu\qty(\left\{x\ :\ \abs{f(x)} > \alpha\right\}) \leq \qty(\frac{\norm{f}_p}{\alpha})^p.$$  [Note that you can find the proof of this simple fact in many texts but you should see if you can figure it out yourself.  Also, note that this inequality holds for all $0 < p < \infty$.]}
 \begin{proof}
+    Let $A_\alpha = \left\{x\ :\ \abs{f(x)} > \alpha\right\} = \left\{x\ :\ \abs{\frac{f(x)}{\alpha}} > 1\right\} = \left\{x\ :\ \abs{\frac{f(x)}{\alpha}}^p > 1\right\}$ for all $p \geq 1$.  Then
+    \begin{align*}
+        \qty(\frac{\norm{f}_p}{\alpha})^p = \int_\Omega \abs{\frac{f(x)}{\alpha}}^p \dd \mu = \int_{A_\alpha} \abs{\frac{f(x)}{\alpha}}^p \dd \mu + \int_{\Omega \setminus A_\alpha} \abs{\frac{f(x)}{\alpha}}^p \dd \mu \geq \int_{A_\alpha} \abs{\frac{f(x)}{\alpha}}^p \dd \mu \geq \int_{A_\alpha} 1 \dd \mu = \mu(A_\alpha)
+    \end{align*}
+    which proves the result.
 \end{proof}
 
 
@@ -167,8 +177,9 @@
     \end{align*}
     for all $f \in L^2$.  Then
     \begin{align*}
-        L(f_n) = \int_0^1 \ell(x)\sqrt{n} \mathcal{X}_{\qty(0, \frac{1}{n})} \dd x \leq \qty(\int_0^1 \abs{\ell(x)}^2\dd x)^{\frac{1}{2}}\qty(\int_0^1 n\mathcal{X}_{\qty(0, \frac{1}{n})})^{\frac{1}{2}} = \norm{\ell}_2\int_0^{\frac{1}{n}}n \dd x = \norm{\ell}_2
+        L(f_n) = \int_0^1 \ell(x)\sqrt{n} \mathcal{X}_{\qty(0, \frac{1}{n})} \dd x = \int_0^{\frac{1}{n}}\ell(x)\sqrt{n}\dd x \leq \qty(\int_0^{\frac{1}{n}}\abs{\ell(x)}^2\dd x)^{\frac{1}{2}}\qty(\int_{0}^{\frac{1}{n}}n\dd x)^{\frac{1}{2}} = \qty(\int_0^{\frac{1}{n}}\abs{\ell(x)}^2\dd x) \rightarrow 0
     \end{align*}
+    since $\ell$ is fixed and $\mu\qty(\qty(0, \frac{1}{n})) \rightarrow 0$ as $n \rightarrow 0$.  Thus $f_n \rightharpoonup 0$ in $L^2(0,1)$.
 \end{proof}
 
 
@@ -179,6 +190,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \problem{Problem 6}{Find a sequence of functions with the property that $f_j$ converges to $0$ in $L^2(\Omega)$ weakly, to $0$ in $L^{\frac{3}{2}}(\Omega)$ strongly, but it does not converge to $0$ strongly in $L^2(\Omega)$.}
 \begin{proof}
+    Let $f_n = \sqrt{n}\mathcal{X}_{\qty(0, \frac{1}{n})}$.  Then by number 5, $f_n \not\rightarrow 0$ in $L^2(0,1)$ but $f_n \rightharpoonup 0$ in $L^2(0,1)$.  Also,
+    \begin{align*}
+        \norm{f_n}_{\frac{3}{2}}^{\frac{3}{2}} = \int_0^1\abs{n^{\frac{1}{2}}\mathcal{X}_{\qty(0, \frac{1}{n})}}^{\frac{3}{2}}\dd x = \int_0^\frac{1}{n}n^{\frac{3}{4}}\dd x = n^{-\frac{1}{4}} \rightarrow 0\ \ \text{as}\ \ n \rightarrow \infty
+    \end{align*}
+    Thus $f_n \rightarrow 0$ in $L^{\frac{3}{2}}(0,1)$.
 \end{proof}
 
 
