--- a/facts/facts.tex
+++ b/facts/facts.tex
@@ -6,6 +6,8 @@
 \renewcommand*{\theenumii}{\theenumi.\arabic{enumii}}
 \renewcommand*{\theenumiii}{\theenumii.\arabic{enumiii}}
 
+\newcommand{\E}{\varepsilon}
+
 
 \title{Functional Analysis Facts}
 \author{Sam Fleischer}
@@ -83,5 +85,14 @@
         \item \textbf{Riesz Representation Theorem ($1 < p < \infty$)} - For conjugate exponents $p$ and $q$, every bounded (continuous) linear functional on $L^p$ can be represented as an integral operator whose kernel is in $L^q$.  $$\phi \in (L^p)^*\ \ \implies\ \ \exists g \in L^q\ \text{ such that }\ \phi(f) = \int f g\ \ \forall f \in L^p.$$
         \item \textbf{Reflexivity of $L^p$ ($1 < p < \infty$)} - The dual space of the dual space of $L^p$ is isomorphic to $L^p$.
         \item \textbf{Radon-Nikodym Theorem} - If $\mu$ and $\nu$ are two finite measures on a measure space where $\nu$ is absolutely continuous with respect to $\mu$, then there exists an $L^1$ function $h$ to change the measure of integration as follows: $$\int F \dd\nu = \int F h \dd\mu \qquad \text{for every positive measurable function } F.$$
+        \item \textbf{Converse to H\"{o}lder's Inequality} - For finite measure spaces, if a product of a measurable function and any simple function is $L^1$, and if the supremum of the $L^1$-norm of the product (for simple functions of $L^p$-norm $1$) is finite, then the measurable function is in $L^q$ and its $L^q$-norm is equal to that supremum.  $$M(g) = \sup_{\norm{f}_p = 1} \left\{\abs{\int_\Omega fg \dd\mu}\ :\ f \text{ is a simple function}\right\} < \infty\ \ \implies\ \ g \in L^q(\Omega)\ \ \text{and}\ \ \norm{g}_q = M(g).$$
+        \item \textbf{Alaoglu's Lemma} - The closed unit ball in the dual of a Banach space is compact in the weak-$^*$ topology.
+        \item \textbf{Weak Compactness for $L^p(\Omega)$ for $1 < p < \infty$} - Every bounded sequence in $L^p$ has a weakly convergent subsequence.
+        \item \textbf{Weak-$^*$ compactness for $L^\infty$} - Every bounded sequence in $L^\infty$ has a weak$^*$ convergent subsequence.
+        \item \textbf{Convergence implies weak convergence} - Convergent sequences in $L^p$ are weakly convergent.
+        \item \textbf{Weak Limits have Bounded Norms} - The $L^p$ norm of a weak limit is bounded by the lim~inf of the $L^p$ norms of its sequence.
+        \item \textbf{Weakly convergent Sequences are bounded} - Weakly convergent $L^p$ sequences have bounded $L^p$ norms.
+        \item \textbf{Egoroff's Theorem} - For pointwise convergent sequences on finite domains, there exist arbitrarily small (positive measure) subsets such that the sequence converges uniformly on its complement. $$\forall \E < 0,\ \exists E \subset \Omega\ \text{with}\ \abs{E} < \E\ \text{such that}\ f_k \rightarrow f\ \text{uniformly on}\ \Omega\setminus E.$$
+        \item \textbf{thing}
     \end{enumerate}
 \end{document}
